--- a/class-00/lab-c/starter-code/styles/ base.css
+++ b/class-00/lab-c/starter-code/styles/ base.css
@@ -5,3 +5,47 @@
   body {
     background: #fff;
   }
+
+  aside {
+    padding-top: 30px;
+    padding-bottom: 60px
+  }
+  section hr {
+    border-bottom: 1px solid #eee;
+    height: 0;
+  }
+  footer  {
+    padding: 50px 0;
+    line-height: 1.5em;
+    text-align: center;
+    color: #aaa;
+  }
+  #logo h1 {
+    padding-left: 50px;
+    font-family: 'Yellowtail', cursive;
+    font-size: 2.4em;
+  }
+h2 {
+    margin-top: 50px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+  }
+.print, .date {
+    color: #a9a8a5;
+    font-family: 'Abel', sans-serif;
+    font-size: .8em;
+    margin: 0;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-bottom: 33px;
+  }
+  
+.date {
+    float: left;
+  }
+  
+.print {
+    text-decoration: none;
+    padding-left: 30px;
+    float: right;
+  }
